lib/Dialect/Hipsr/Scheme/Runtime/SchemeBindings.h

class Operation;
class Value;
class Type;
//===----------------------------------------------------------------------===//
// Phase 1: Type System FFI
//===----------------------------------------------------------------------===//

// Check if a Type is a RankedTensorType
// Returns: boolean (1 = true, 0 = false)
int mlir_type_is_ranked_tensor(SchemeValue type_ptr);
// Get element type of a tensor type
// Returns: Type* as uptr
SchemeValue mlir_type_get_element_type(SchemeValue type_ptr);
// Get shape of a ranked tensor type
// Returns: list of dimension sizes (int64_t*)
SchemeValue mlir_type_get_shape(SchemeValue type_ptr);
// Get rank of a ranked tensor type
// Returns: int
int mlir_type_get_rank(SchemeValue type_ptr);
// Get type from a Value
// Returns: Type* as uptr
SchemeValue mlir_value_get_type(SchemeValue value_ptr);
//===----------------------------------------------------------------------===//
// Phase 2: Operation/Value Navigation FFI
//===----------------------------------------------------------------------===//

// Get parent operation
// Returns: Operation* as uptr (or nullptr)
SchemeValue mlir_operation_get_parent(SchemeValue op_ptr);
// Get operand Value from operation by index
// Returns: Value as uptr
SchemeValue mlir_operation_get_operand_value(SchemeValue op_ptr, int index);
// Get result Value from operation by index
// Returns: Value as uptr
SchemeValue mlir_operation_get_result_value(SchemeValue op_ptr, int index);
// Get location from operation
// Returns: Location* as uptr
SchemeValue mlir_operation_get_loc(SchemeValue op_ptr);
// Get block argument from parent function
// Returns: Value as uptr
SchemeValue mlir_operation_get_block_argument(SchemeValue op_ptr, int index);